Added some testing and implementation

--- a/Trading-Bot-Testing.ipynb
+++ b/Trading-Bot-Testing.ipynb
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "id": "94f2a8d1",
    "metadata": {
     "scrolled": true
@@ -399,7 +399,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ret_code': 0, 'ret_msg': 'OK', 'ext_code': '', 'ext_info': '', 'result': {'user_id': 431866, 'order_id': 'af72b89c-49fb-49a7-bced-7a29b2018b25', 'symbol': 'BTCUSD', 'side': 'Sell', 'order_type': 'Market', 'price': 41671, 'qty': 10000, 'time_in_force': 'ImmediateOrCancel', 'order_status': 'Created', 'last_exec_time': 0, 'last_exec_price': 0, 'leaves_qty': 10000, 'cum_exec_qty': 0, 'cum_exec_value': 0, 'cum_exec_fee': 0, 'reject_reason': 'EC_NoError', 'order_link_id': '', 'created_at': '2022-01-07T01:09:03.885Z', 'updated_at': '2022-01-07T01:09:03.885Z', 'take_profit': '42526.00', 'stop_loss': '43063.00', 'tp_trigger_by': 'LastPrice', 'sl_trigger_by': 'LastPrice'}, 'time_now': '1641517743.885560', 'rate_limit_status': 98, 'rate_limit_reset_ms': 1641517743883, 'rate_limit': 100}\n"
+      "{'ret_code': 0, 'ret_msg': 'OK', 'ext_code': '', 'ext_info': '', 'result': {'user_id': 431866, 'order_id': '596feebd-b422-4f7a-916c-5c9d8254a169', 'symbol': 'BTCUSD', 'side': 'Buy', 'order_type': 'Market', 'price': 43054.5, 'qty': 10000, 'time_in_force': 'ImmediateOrCancel', 'order_status': 'Created', 'last_exec_time': 0, 'last_exec_price': 0, 'leaves_qty': 10000, 'cum_exec_qty': 0, 'cum_exec_value': 0, 'cum_exec_fee': 0, 'reject_reason': 'EC_NoError', 'order_link_id': '', 'created_at': '2022-01-07T17:36:34.188Z', 'updated_at': '2022-01-07T17:36:34.188Z', 'take_profit': '42230.00', 'stop_loss': '41707.00', 'tp_trigger_by': 'LastPrice', 'sl_trigger_by': 'LastPrice'}, 'time_now': '1641576994.188417', 'rate_limit_status': 99, 'rate_limit_reset_ms': 1641576994185, 'rate_limit': 100}\n"
      ]
     }
    ],
