--- a/Trading-Bot-Testing.ipynb
+++ b/Trading-Bot-Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a2048ad7",
    "metadata": {},
    "outputs": [],
@@ -389,8 +389,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "94f2a8d1",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ret_code': 0, 'ret_msg': 'OK', 'ext_code': '', 'ext_info': '', 'result': {'user_id': 431866, 'order_id': 'd08ad621-d33d-41b0-84eb-8cb597278315', 'symbol': 'BTCUSD', 'side': 'Buy', 'order_type': 'Market', 'price': 43045.5, 'qty': 10000, 'time_in_force': 'ImmediateOrCancel', 'order_status': 'Created', 'last_exec_time': 0, 'last_exec_price': 0, 'leaves_qty': 10000, 'cum_exec_qty': 0, 'cum_exec_value': 0, 'cum_exec_fee': 0, 'reject_reason': 'EC_NoError', 'order_link_id': '', 'created_at': '2022-01-07T19:40:31.209Z', 'updated_at': '2022-01-07T19:40:31.209Z', 'take_profit': '42203.00', 'stop_loss': '41680.00', 'tp_trigger_by': 'LastPrice', 'sl_trigger_by': 'LastPrice'}, 'time_now': '1641584431.209624', 'rate_limit_status': 99, 'rate_limit_reset_ms': 1641584431202, 'rate_limit': 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run bybit_trader.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7cc4b01e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = HTTP(\"https://api-testnet.bybit.com\",\n",
+    "              api_key=api_key,\n",
+    "              api_secret=api_secret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ced7a75e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ret_code': 0, 'ret_msg': 'OK', 'ext_code': '', 'ext_info': '', 'result': {'BIT': {'equity': 0, 'available_balance': 0, 'used_margin': 0, 'order_margin': 0, 'position_margin': 0, 'occ_closing_fee': 0, 'occ_funding_fee': 0, 'wallet_balance': 0, 'realised_pnl': 0, 'unrealised_pnl': 0, 'cum_realised_pnl': 0, 'given_cash': 0, 'service_cash': 0}, 'BTC': {'equity': 0.018, 'available_balance': 0.018, 'used_margin': 0, 'order_margin': 0, 'position_margin': 0, 'occ_closing_fee': 0, 'occ_funding_fee': 0, 'wallet_balance': 0.018, 'realised_pnl': 0, 'unrealised_pnl': 0, 'cum_realised_pnl': -0.00789841, 'given_cash': 0, 'service_cash': 0}, 'DOT': {'equity': 0, 'available_balance': 0, 'used_margin': 0, 'order_margin': 0, 'position_margin': 0, 'occ_closing_fee': 0, 'occ_funding_fee': 0, 'wallet_balance': 0, 'realised_pnl': 0, 'unrealised_pnl': 0, 'cum_realised_pnl': 0, 'given_cash': 0, 'service_cash': 0}, 'EOS': {'equity': 0, 'available_balance': 0, 'used_margin': 0, 'order_margin': 0, 'position_margin': 0, 'occ_closing_fee': 0, 'occ_funding_fee': 0, 'wallet_balance': 0, 'realised_pnl': 0, 'unrealised_pnl': 0, 'cum_realised_pnl': 0, 'given_cash': 0, 'service_cash': 0}, 'ETH': {'equity': 0, 'available_balance': 0, 'used_margin': 0, 'order_margin': 0, 'position_margin': 0, 'occ_closing_fee': 0, 'occ_funding_fee': 0, 'wallet_balance': 0, 'realised_pnl': 0, 'unrealised_pnl': 0, 'cum_realised_pnl': 0, 'given_cash': 0, 'service_cash': 0}, 'USDT': {'equity': 0, 'available_balance': 0, 'used_margin': 0, 'order_margin': 0, 'position_margin': 0, 'occ_closing_fee': 0, 'occ_funding_fee': 0, 'wallet_balance': 0, 'realised_pnl': 0, 'unrealised_pnl': 0, 'cum_realised_pnl': 0, 'given_cash': 0, 'service_cash': 0}, 'XRP': {'equity': 0, 'available_balance': 0, 'used_margin': 0, 'order_margin': 0, 'position_margin': 0, 'occ_closing_fee': 0, 'occ_funding_fee': 0, 'wallet_balance': 0, 'realised_pnl': 0, 'unrealised_pnl': 0, 'cum_realised_pnl': 0, 'given_cash': 0, 'service_cash': 0}}, 'time_now': '1644537418.333223', 'rate_limit_status': 119, 'rate_limit_reset_ms': 1644537418327, 'rate_limit': 120}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(session.get_wallet_balance())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2af17ac9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ret_code': 0,\n",
+       " 'ret_msg': 'OK',\n",
+       " 'ext_code': '',\n",
+       " 'ext_info': '',\n",
+       " 'result': {'BIT': {'equity': 0,\n",
+       "   'available_balance': 0,\n",
+       "   'used_margin': 0,\n",
+       "   'order_margin': 0,\n",
+       "   'position_margin': 0,\n",
+       "   'occ_closing_fee': 0,\n",
+       "   'occ_funding_fee': 0,\n",
+       "   'wallet_balance': 0,\n",
+       "   'realised_pnl': 0,\n",
+       "   'unrealised_pnl': 0,\n",
+       "   'cum_realised_pnl': 0,\n",
+       "   'given_cash': 0,\n",
+       "   'service_cash': 0},\n",
+       "  'BTC': {'equity': 0.018,\n",
+       "   'available_balance': 0.018,\n",
+       "   'used_margin': 0,\n",
+       "   'order_margin': 0,\n",
+       "   'position_margin': 0,\n",
+       "   'occ_closing_fee': 0,\n",
+       "   'occ_funding_fee': 0,\n",
+       "   'wallet_balance': 0.018,\n",
+       "   'realised_pnl': 0,\n",
+       "   'unrealised_pnl': 0,\n",
+       "   'cum_realised_pnl': -0.00789841,\n",
+       "   'given_cash': 0,\n",
+       "   'service_cash': 0},\n",
+       "  'DOT': {'equity': 0,\n",
+       "   'available_balance': 0,\n",
+       "   'used_margin': 0,\n",
+       "   'order_margin': 0,\n",
+       "   'position_margin': 0,\n",
+       "   'occ_closing_fee': 0,\n",
+       "   'occ_funding_fee': 0,\n",
+       "   'wallet_balance': 0,\n",
+       "   'realised_pnl': 0,\n",
+       "   'unrealised_pnl': 0,\n",
+       "   'cum_realised_pnl': 0,\n",
+       "   'given_cash': 0,\n",
+       "   'service_cash': 0},\n",
+       "  'EOS': {'equity': 0,\n",
+       "   'available_balance': 0,\n",
+       "   'used_margin': 0,\n",
+       "   'order_margin': 0,\n",
+       "   'position_margin': 0,\n",
+       "   'occ_closing_fee': 0,\n",
+       "   'occ_funding_fee': 0,\n",
+       "   'wallet_balance': 0,\n",
+       "   'realised_pnl': 0,\n",
+       "   'unrealised_pnl': 0,\n",
+       "   'cum_realised_pnl': 0,\n",
+       "   'given_cash': 0,\n",
+       "   'service_cash': 0},\n",
+       "  'ETH': {'equity': 0,\n",
+       "   'available_balance': 0,\n",
+       "   'used_margin': 0,\n",
+       "   'order_margin': 0,\n",
+       "   'position_margin': 0,\n",
+       "   'occ_closing_fee': 0,\n",
+       "   'occ_funding_fee': 0,\n",
+       "   'wallet_balance': 0,\n",
+       "   'realised_pnl': 0,\n",
+       "   'unrealised_pnl': 0,\n",
+       "   'cum_realised_pnl': 0,\n",
+       "   'given_cash': 0,\n",
+       "   'service_cash': 0},\n",
+       "  'USDT': {'equity': 0,\n",
+       "   'available_balance': 0,\n",
+       "   'used_margin': 0,\n",
+       "   'order_margin': 0,\n",
+       "   'position_margin': 0,\n",
+       "   'occ_closing_fee': 0,\n",
+       "   'occ_funding_fee': 0,\n",
+       "   'wallet_balance': 0,\n",
+       "   'realised_pnl': 0,\n",
+       "   'unrealised_pnl': 0,\n",
+       "   'cum_realised_pnl': 0,\n",
+       "   'given_cash': 0,\n",
+       "   'service_cash': 0},\n",
+       "  'XRP': {'equity': 0,\n",
+       "   'available_balance': 0,\n",
+       "   'used_margin': 0,\n",
+       "   'order_margin': 0,\n",
+       "   'position_margin': 0,\n",
+       "   'occ_closing_fee': 0,\n",
+       "   'occ_funding_fee': 0,\n",
+       "   'wallet_balance': 0,\n",
+       "   'realised_pnl': 0,\n",
+       "   'unrealised_pnl': 0,\n",
+       "   'cum_realised_pnl': 0,\n",
+       "   'given_cash': 0,\n",
+       "   'service_cash': 0}},\n",
+       " 'time_now': '1644537555.588081',\n",
+       " 'rate_limit_status': 119,\n",
+       " 'rate_limit_reset_ms': 1644537555583,\n",
+       " 'rate_limit': 120}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = session.get_wallet_balance()\n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "df18190f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wallet = response.get('result')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f0c3c5e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "btc_balance = wallet.get('BTC')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7818e6f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "btc = btc_balance.get('available_balance')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c3749ea8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.018"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "btc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "91283b16",
    "metadata": {
     "scrolled": true
    },
@@ -399,12 +620,88 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ret_code': 0, 'ret_msg': 'OK', 'ext_code': '', 'ext_info': '', 'result': {'user_id': 431866, 'order_id': '596feebd-b422-4f7a-916c-5c9d8254a169', 'symbol': 'BTCUSD', 'side': 'Buy', 'order_type': 'Market', 'price': 43054.5, 'qty': 10000, 'time_in_force': 'ImmediateOrCancel', 'order_status': 'Created', 'last_exec_time': 0, 'last_exec_price': 0, 'leaves_qty': 10000, 'cum_exec_qty': 0, 'cum_exec_value': 0, 'cum_exec_fee': 0, 'reject_reason': 'EC_NoError', 'order_link_id': '', 'created_at': '2022-01-07T17:36:34.188Z', 'updated_at': '2022-01-07T17:36:34.188Z', 'take_profit': '42230.00', 'stop_loss': '41707.00', 'tp_trigger_by': 'LastPrice', 'sl_trigger_by': 'LastPrice'}, 'time_now': '1641576994.188417', 'rate_limit_status': 99, 'rate_limit_reset_ms': 1641576994185, 'rate_limit': 100}\n"
+      "{'ret_code': 0, 'ret_msg': 'OK', 'ext_code': '', 'ext_info': '', 'result': {'user_id': 431866, 'order_id': '0827d6f7-219c-4fe5-b4e2-22c182b0bf65', 'symbol': 'BTCUSD', 'side': 'Sell', 'order_type': 'Market', 'price': 40054.5, 'qty': 720, 'time_in_force': 'ImmediateOrCancel', 'order_status': 'Created', 'last_exec_time': 0, 'last_exec_price': 0, 'leaves_qty': 720, 'cum_exec_qty': 0, 'cum_exec_value': 0, 'cum_exec_fee': 0, 'reject_reason': 'EC_NoError', 'order_link_id': '', 'created_at': '2022-03-21T22:03:02.378Z', 'updated_at': '2022-03-21T22:03:02.378Z', 'take_profit': '39273.00', 'stop_loss': '42167.00', 'tp_trigger_by': 'LastPrice', 'sl_trigger_by': 'LastPrice'}, 'time_now': '1647900182.378834', 'rate_limit_status': 99, 'rate_limit_reset_ms': 1647900182375, 'rate_limit': 100}\n"
      ]
     }
    ],
    "source": [
-    "%run bybit_trader.py"
+    "%run trading_bot_script_v2.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a3ab337d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = HTTP(\"https://api-testnet.bybit.com\",\n",
+    "              api_key=api_key,\n",
+    "              api_secret=api_secret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a2f8ae6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ret_code': 0,\n",
+       " 'ret_msg': 'OK',\n",
+       " 'ext_code': '',\n",
+       " 'ext_info': '',\n",
+       " 'result': {'id': 0,\n",
+       "  'position_idx': 0,\n",
+       "  'mode': 0,\n",
+       "  'user_id': 431866,\n",
+       "  'risk_id': 1,\n",
+       "  'symbol': 'BTCUSD',\n",
+       "  'side': 'Sell',\n",
+       "  'size': 720,\n",
+       "  'position_value': '0.01743658',\n",
+       "  'entry_price': '41292.50116709',\n",
+       "  'is_isolated': True,\n",
+       "  'auto_add_margin': 0,\n",
+       "  'leverage': '1',\n",
+       "  'effective_leverage': '1',\n",
+       "  'position_margin': '0.01743658',\n",
+       "  'liq_price': '999999',\n",
+       "  'bust_price': '999999',\n",
+       "  'occ_closing_fee': '0.00000044',\n",
+       "  'occ_funding_fee': '0',\n",
+       "  'take_profit': '39273',\n",
+       "  'stop_loss': '42167',\n",
+       "  'trailing_stop': '0',\n",
+       "  'position_status': 'Normal',\n",
+       "  'deleverage_indicator': 3,\n",
+       "  'oc_calc_data': '{\"blq\":0,\"slq\":0,\"bmp\":0,\"smp\":0,\"fq\":720,\"bv2c\":1.0018,\"sv2c\":1.0006}',\n",
+       "  'order_margin': '0',\n",
+       "  'wallet_balance': '0.01798953',\n",
+       "  'realised_pnl': '-0.00001047',\n",
+       "  'unrealised_pnl': -1.193e-05,\n",
+       "  'cum_realised_pnl': '-0.00790888',\n",
+       "  'cross_seq': 4952484431,\n",
+       "  'position_seq': 0,\n",
+       "  'created_at': '2022-01-06T19:43:10.799241294Z',\n",
+       "  'updated_at': '2022-03-21T22:17:07.42110811Z',\n",
+       "  'tp_sl_mode': 'Full'},\n",
+       " 'time_now': '1647901027.422240',\n",
+       " 'rate_limit_status': 119,\n",
+       " 'rate_limit_reset_ms': 1647901027418,\n",
+       " 'rate_limit': 120}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_positions = session.my_position(symbol=\"BTCUSD\")\n",
+    "my_positions"
    ]
   }
  ],
